	  improved dump() for invalid utf8 strings.
	* xarray.h: (xqueue_p) new class.
	* Torrent.cc, Torrent.h: added timeout for tracker requests;
	  added support for tracker groups; new option --dht-bootstrap
	  for manual bootstrapping.
	* ftp-opie.c: use newer version from wget (fixes a bug on 64-bit hw).
	* xstring.cc, xstring.h: (hex_decode) new method.

2012-08-15  Alexander V. Lukyanov <lav@yars.free.net>

	* Bencode.cc, Bencode.h: new ctor; Pack to xstring.
	* Filter.cc, Filter.h: (set_create_mode, set_lock) new methods,
	  do file locking if requested.
	* misc.cc, misc.h, attach.h: (get_nodename) new function.
	* xstring.cc, xstring.h: add explicit clone ctor; (move_here) new
	  method.
	* xmap.cc, xmap.h: (empty) new method; xmap_p now uses delete.
	* xarray.h: xarray_p now uses delete.
	* network.cc, network.h: (family, set_port, compact, compact_addr,
	  set_compact) new methods.
	* Torrent.cc, Torrent.h: add DHT and magnet support.

2012-08-08  Alexander V. Lukyanov <lav@yars.free.net>

	* Torrent.cc, Torrent.h: add mt_metadata extension.

2012-08-07  Alexander V. Lukyanov <lav@yars.free.net>

	* Bencode.cc, Bencode.h: new ctor BeNode(const char *);
	  (ComputeLength, Pack, Format1) new methods.
	* buffer.h: add Put(char) method.
	* xmap.h: add add(const char*) method.
	* Torrent.cc, Torrent.h: add LTEP and FAST Extensions.

2012-07-26  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: send PROT after AUTH in any case, for servers
	  requiring a PROT command.

2012-07-25  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: don't try to upload if ALLO fails.

2012-07-19  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp_ssl.cc: fixed fatal error checking for gnutls.
	* IdNameCache.cc, IdNameCache.h: allow numeric names.

2012-07-03  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp_ssl.cc: tread decryption error as non-fatal.
	* ftpclass.cc: define TELNET_* ad char constants, get rid of type casts.