@@ -9,6 +9,8 @@
 	  for manual bootstrapping.
 	* ftp-opie.c: use newer version from wget (fixes a bug on 64-bit hw).
 	* xstring.cc, xstring.h: (hex_decode) new method.
+	* Torrent.cc, Torrent.h: use hex_decode; allow pure hash instead of
+	  magnet links; make tracker Fail if no valid URLs found.
 
 2012-08-15  Alexander V. Lukyanov <lav@yars.free.net>
 
